--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
----
-layout: default
----
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+
+        <title>The HTML5 Herald</title>
+        <meta name="description" content="The HTML5 Herald" />
+        <meta name="author" content="SitePoint" />
+    </head>
+
+    <body>
+        <h1>The HTML5 Herald</h1>
+    </body>
+</html>
